Add OAuth 2.0 to offers endpoint
